style: add padding buttom to prevent overflow

--- a/packages/mirror-tv-next/styles/components/topic/topics-list-manager.module.scss
+++ b/packages/mirror-tv-next/styles/components/topic/topics-list-manager.module.scss
@@ -16,6 +16,7 @@
   row-gap: 20px;
   overflow: hidden;
   max-width: 100%;
+  padding-bottom: 6px;
   @include breakpoint(md) {
     width: 100%;
     grid-template-columns: 1fr 1fr 1fr;
